--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
           <p>I will be able to provide multiple services including web design, big data analysis, and app development.</p>
 				</div>
         	<div class='item'>
-<img src="images/headshot.jpg" alt="Rock Climbing" class="main-image-circle"> 
-					
+<img src="images/headshot-2.png" alt="Headshot white shirt" class="main-image-circle"> 
 				</div>
 			</div>
       </div>
@@ -55,27 +54,89 @@
       <h2>Portfolio</h2>
 			<div class='group'>
 				<div class='item'>
-          <img src="images/web-design.png" alt="Project-1" class="portfolio-img" >
-          <a href="#"><h3>Project 1</h3></a>
-					<p>Description of the yet to be started front end web design project. This is just a place holder. Adding more text so the length looks more natural.</p>
+          <img src="images/flame.png" alt="Project-1" class="portfolio-img" >
+          <h3>Fire Safety Lookup</h3>
+          <p>API capstone. Fire safety app that allows users to search a location and radius and get back a list of fires with information ordered by proximity</p>
+         <div class="project-links">
+          <a href="https://dan-j-gibson.github.io/Fire-Safety-Lookup/">Live Site</a>
+          <a href="https://github.com/dan-j-gibson/Fire-Safety-Lookup">GitHub Repo</a>
+				</div>
+          <p>Built With:
+            <h5>Front-End</h5>
+            HTML
+            <br>CSS
+              <br>
+              <br>
+            <h5>Back-End</h5>
+            JavaScript
+            <br>JQuery
+          </p>
 				</div>
 				<div class='item'>
           <img src="images/money.png" alt="Project-2" class="portfolio-img">
-          <a href="#"><h3>Project 2</h3></a>
-					<p>Description of the yet to be started javascript based lottery game project. This is just a place holder. Adding more text so the length looks more natural.</p>
+          <h3>Random Dogs</h3>
+          <p>Description of the random dog image generator. This iteration returns the amount of dogs entered into the number input.</p>
+          <div class="project-links">
+            <a href="https://dan-j-gibson.github.io/dog-api/">Live Site</a>
+            <a href="https://github.com/dan-j-gibson/dog-api">GitHub Repo</a>
+          </div>
+            <p>Built With:
+              <h5>Front-End</h5>
+              HTML
+              <br>CSS
+                <br>
+                <br>
+              <h5>Back-End</h5>
+              JavaScript
+              <br>JQuery
+                <br>
+                <br>
+            </p>
 				</div>
 			</div>
       <div class='group'>
 				<div class='item'>
           <img src="images/basketball.png" alt="Project-3" class="portfolio-img">
-          <a href="#"><h3>Project 3</h3></a>
-					<p>Description of the yet to be started NBA data analytis project. This is just a place holder. Adding more text so the length looks more natural.</p>
-				</div>
+          <h3>National Parks API</h3>
+					<p>First API connected app. Uses GET functions to pull external data and return national park information based on user provided state inputs.</p>
+          <div class="project-links">
+            <a href="https://dan-j-gibson.github.io/awa-7/">Live Site</a>
+            <a href="https://github.com/dan-j-gibson/awa-7">GitHub Repo</a>
+          </div>
+            <p>Built With:
+              <h5>Front-End</h5>
+              HTML
+              <br>CSS
+                <br>
+                <br>
+              <h5>Back-End</h5>
+              JavaScript
+              <br>JQuery
+                <br>
+                <br>
+            </p>
+        </div>
 				<div class='item'>
           <img src="images/covid.png" alt="Project-4" class="portfolio-img" >
-          <a href="#"><h3>Project 4</h3></a>
-					<p>Description of the yet to be started COVID map project. This is just a place holder. Adding more text so the length looks more natural.</p>
-				</div>
+          <a href="#"><h3>Kendrick Quiz App</h3></a>
+					<p>Quiz app utilizing JQuery with positive and negative responsed. Includes an accumulator function offers seemless feedback to the user.</p>
+          <div class="project-links">
+            <a href="https://dan-j-gibson.github.io/Quiz-App/">Live Site</a>
+            <a href="https://github.com/dan-j-gibson/Quiz-App">GitHub Repo</a>
+          </div>
+            <p>Built With:
+              <h5>Front-End</h5>
+              HTML
+              <br>CSS
+                <br>
+                <br>
+              <h5>Back-End</h5>
+              JavaScript
+              <br>JQuery
+                <br>
+                <br>
+            </p>
+        </div>
 			</div>
       </article>
 </div>
@@ -88,9 +149,9 @@
       <div class="container">
           <h2>Contact Me</h2>
         <div class='group'>
-          <div class='item-double'>
-            <img src="images/headshot.jpg" alt="Headshot Image"> 
-          </div>
+          <!-- <div class='item-double'>
+            <img src="images/headshot.jpg" height=50% width=25% alt="Headshot Image"> 
+          </div> -->
           <div class='item'>
             <div id="contact-links">
             <ul>
